Use EthernetConnection in NE2000 and drop pcap
Instead of the NE2000 code requiring a compile-time switch to use,
instead have it always present. At runtime it will try to create an
EthernetConnection based on its 'backend' property and use that.

Nobody's going to maintain the pcap code, so throw it out while we're
doing that.

--- a/src/hardware/meson.build
+++ b/src/hardware/meson.build
@@ -58,7 +58,7 @@ libhardware_sources = files([
 libhardware = static_library('hardware', libhardware_sources,
                              include_directories : incdir,
                              dependencies : [
-                               pcap_dep,
+                               libnuked_dep,
                                png_dep,
                                sdl2_dep,
                                sdl2_net_dep,
