Add the libslirp EthernetConnection backend
This commit adds a libslirp-based backend that provides just enough
internal networking to handle TCP/IP out of the guest to host, LAN or
Internet. As such things like ICMP, IPX and NetBIOS don't work properly.

The use case for this connection is to give Internet access to the guest
for things like IRC, HTTP and other connections to online services.

--- a/src/misc/meson.build
+++ b/src/misc/meson.build
@@ -1,6 +1,7 @@
 libmisc_sources = [
   'cross.cpp',
   'ethernet.cpp',
+  'ethernet_slirp.cpp',
   'fs_utils_posix.cpp',
   'fs_utils_win32.cpp',
   'messages.cpp',
@@ -17,6 +18,7 @@ libmisc = static_library('misc', libmisc_sources,
                          dependencies : [
                            corefoundation_dep,
                            sdl2_dep,
+                           slirp_dep,
                            stdcppfs_dep,
                            libloguru_dep,
                            libwhereami_dep,
