Add slirp to Visual Studio solution

--- a/vs/dosbox.vcxproj
+++ b/vs/dosbox.vcxproj
@@ -431,6 +431,8 @@
     <ClCompile Include="..\src\midi\midi_lasynth_model.cpp" />
     <ClCompile Include="..\src\midi\midi_mt32.cpp" />
     <ClCompile Include="..\src\misc\cross.cpp" />
+    <ClCompile Include="..\src\misc\ethernet.cpp" />
+    <ClCompile Include="..\src\misc\ethernet_slirp.cpp" />
     <ClCompile Include="..\src\misc\fs_utils_win32.cpp" />
     <ClCompile Include="..\src\misc\messages.cpp" />
     <ClCompile Include="..\src\misc\pacer.cpp" />
