--- a/.github/workflows/coverity.yml
+++ b/.github/workflows/coverity.yml
@@ -59,7 +59,7 @@ jobs:
       - name: Build and instrument the project
         run: |
           set -xeu
-          CC="clang" CXX="clang++" meson setup -Duse_mt32emu=false -Dunit_tests=disabled build
+          CC="clang" CXX="clang++" meson setup -Duse_slirp=false -Duse_mt32emu=false -Dunit_tests=disabled build
           PATH="${BASE_DIR}/cov-analysis-linux64-${PACKAGE_VERSION}/bin:${PATH}"
           cov-build --dir cov-int ninja -C build
           tar -cvaf package.tar.gz cov-int
