--- a/.github/workflows/platforms.yml
+++ b/.github/workflows/platforms.yml
@@ -58,6 +58,7 @@ jobs:
             pip3 install --user --upgrade meson ninja
             ./scripts/log-env.sh
             meson setup \
+              -Duse_slirp=false \
               -Duse_fluidsynth=false \
               -Duse_mt32emu=false \
               --wrap-mode=nofallback build
