--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -231,6 +231,24 @@ jobs:
           sed -i "s|%GIT_COMMIT%|$GITHUB_SHA|"               dest/README
           sed -i "s|%GIT_BRANCH%|${GITHUB_REF#refs/heads/}|" dest/README
           sed -i "s|%GITHUB_REPO%|$GITHUB_REPOSITORY|"       dest/README
+
+          # Prepare translation files
+          #
+          # Note:
+          #   We conciously drop the dialect postfix because no dialects are available.
+          #   (US was the default DOS dialect and therefore is the default for 'en').
+          #   There users get the generic translation and benefit from simpler filenames.
+          #   Dialect translations will be added if/when they're available.
+          #
+          install -DT -m 644 contrib/translations/en/en_US.lng       dest/translations/en.lng
+          install -DT -m 644 contrib/translations/es/es_ES.lng       dest/translations/es.lng
+          install -DT -m 644 contrib/translations/fr/fr_FR.lng       dest/translations/fr.lng
+          install -DT -m 644 contrib/translations/it/it_IT.lng       dest/translations/it.lng
+          install -DT -m 644 contrib/translations/pl/pl_PL.CP437.lng dest/translations/pl.cp437.lng
+          install -DT -m 644 contrib/translations/pl/pl_PL.lng       dest/translations/pl.lng
+          install -DT -m 644 contrib/translations/ru/ru_RU.lng       dest/translations/ru.lng
+
+          # Finalize directory for tar'ing
           mv dest "dosbox-staging-linux-$VERSION"
           tree --si -p "dosbox-staging-linux-$VERSION"
 
