Add fixed-width IO handler interfaces
Currently the IO port handler interfaces traffic all
arguments as the one-size-fits-all Bitu type. This
includes inbound write values (as Bitu), outbound read
values (as Bitu), port address numbers (as Bitu), and
others arguments.

When DOSBox originated on Windows XP, Bitu was a
32-bit type: but today it's a 64-bit integer type on
modern architectures.  DOS only performs fixed-size
transactions of either byte, word, or dword sizes --
none of which are 64-bits. The ports themselves only
span the 16-bit range up to 65535.

So what's currently happening? The Bitu port numbers
and data values must be cast into the properly-sized
variables or registers on the receiving side: be they
8-bit, 16-bit, or 32-bit-wide types.  We have warnings
about loss of precision (squeezing a 64-bit variable
into smaller-sized variable).

This commit adds three fixed-width IO handlers to let
us migrate away from this "everything Bitu approach: To
be clear - this is simply about the type-sizes; the
interface names are kept the same - as we're only
trying to achieve stronger type-sizing.

The new handlers aren't used: they're simply added them
along-side the existing ones so we can begin the
transition in subsequent PRs, one-by-one, and in small,
easily bisect-able commits (if needed).

--- a/vs/dosbox.vcxproj
+++ b/vs/dosbox.vcxproj
@@ -338,6 +338,7 @@
     <ClCompile Include="..\src\hardware\hardware.cpp" />
     <ClCompile Include="..\src\hardware\innovation.cpp" />
     <ClCompile Include="..\src\hardware\iohandler.cpp" />
+    <ClCompile Include="..\src\hardware\iohandler_containers.cpp" />
     <ClCompile Include="..\src\hardware\ipx.cpp" />
     <ClCompile Include="..\src\hardware\ipxserver.cpp" />
     <ClCompile Include="..\src\hardware\joystick.cpp" />
