--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -10,39 +10,82 @@ env:
 
 jobs:
   build_macos:
-    name: ${{ matrix.conf.name }}
-    runs-on: macos-latest
-    if: github.event_name != 'pull_request' || contains('dreamer,kcgen,ant-222,Wengier', github.actor) == false
+    name: ${{ matrix.conf.name }} (${{ matrix.conf.arch }})
+    runs-on: ${{ matrix.conf.host }}
+    if: github.event_name != 'pull_request' || contains('dreamer,kcgen,ant-222,Wengier,kklobe', github.actor) == false
     strategy:
-      max-parallel: 3
+      fail-fast: false
       matrix:
         conf:
-
           - name: Clang
+            host: macos-latest
+            arch: x86_64
+            needs_deps: true
             packages: meson
             max_warnings: 0
 
-          - name: GCC
-            packages: gcc@9
-            build_flags: --native-file=.github/meson/native-gcc-9.ini
+          - name: GCC 11
+            host: macos-latest
+            arch: x86_64
+            needs_deps: true
+            packages: gcc@11
+            build_flags: --native-file=.github/meson/native-gcc-11.ini
             max_warnings: 0
 
           - name: Clang, +tests
+            host: macos-latest
+            arch: x86_64
+            needs_deps: true
             run_tests: true
             max_warnings: -1
 
           - name: Clang, +debugger
+            host: macos-latest
+            arch: x86_64
+            needs_deps: true
             build_flags: -Denable_debugger=normal
             max_warnings: 108
 
           - name: Clang, warning_level=3
+            host: macos-latest
+            arch: x86_64
+            needs_deps: true
             build_flags: -Dwarning_level=3
             max_warnings: 180
+
+          - name: Clang
+            host: [self-hosted, macOS, arm64, debug-builds]
+            arch: arm64
+            needs_deps: false
+            packages: meson
+            max_warnings: 0
+
+          - name: Clang, +tests
+            host: [self-hosted, macOS, arm64, debug-builds]
+            arch: arm64
+            needs_deps: false
+            run_tests: true
+            max_warnings: -1
+
+          - name: Clang, +debugger
+            host: [self-hosted, macOS, arm64, debug-builds]
+            arch: arm64
+            needs_deps: false
+            build_flags: -Denable_debugger=normal
+            max_warnings: -142
+
+          - name: Clang, warning_level=3
+            host: [self-hosted, macOS, arm64, debug-builds]
+            arch: arm64
+            needs_deps: false
+            build_flags: -Dwarning_level=3
+            max_warnings: 194
 
     steps:
       - uses: actions/checkout@v2
 
       - name:  Prepare brew and compiler caches
+        if:    matrix.conf.needs_deps
         id:    prep-caches
         shell: bash
         run: |
@@ -55,21 +98,24 @@ jobs:
           echo "::set-output name=brew_dir::$BREW_DIR"
           echo "::set-output name=ccache_dir::$CCACHE_DIR"
           echo "::set-output name=today::$(date +%F)"
-          echo "::set-output name=name_hash::$(echo '${{ matrix.conf.name }}' | shasum | cut -b-8)"
+          echo "::set-output name=name_hash::$(echo '${{ matrix.conf.name }} ${{ matrix.conf.arch }}' | shasum | cut -b-8)"
 
       - uses:  actions/cache@v2
+        if:    matrix.conf.needs_deps
         with:
           path: ${{ steps.prep-caches.outputs.brew_dir }}
-          key:  brew-cache-${{ steps.prep-caches.outputs.today }}
-          restore-keys: brew-cache-
+          key:  brew-cache-${{ matrix.conf.arch }}-${{ steps.prep-caches.outputs.today }}
+          restore-keys: brew-cache-${{ matrix.conf.arch }}-
 
       - name: Install C++ compiler and libraries
+        if:   matrix.conf.needs_deps
         run: |
-          brew install \
+          arch -arch=${{ matrix.conf.arch }} brew install \
             ${{ matrix.conf.packages }} \
             $(cat ./.github/packages/macos-latest-brew.txt)
 
       - uses:  actions/cache@v2
+        if:    matrix.conf.needs_deps
         with:
           path: ${{ steps.prep-caches.outputs.ccache_dir }}
           key:  ccache-macos-debug-${{ steps.prep-caches.outputs.name_hash }}-${{ steps.prep-caches.outputs.today }}
@@ -84,60 +130,78 @@ jobs:
           key:  subprojects-${{ hashFiles('subprojects/*.wrap') }}
 
       - name: Log environment
-        run:  ./scripts/log-env.sh
+        run:  arch -arch=${{ matrix.conf.arch }} ./scripts/log-env.sh
 
-      - run:  meson setup ${{ matrix.conf.build_flags }} build
+      - run:  arch -arch=${{ matrix.conf.arch }} meson setup ${{ matrix.conf.build_flags }} build
 
       - name: Build
         run: |
           set -xo pipefail
-          meson compile -C build 2>&1 | tee build.log
+          arch -arch=${{ matrix.conf.arch }} meson compile -C build 2>&1 | tee build.log
 
       - name: Run tests
         if:   matrix.conf.run_tests
-        run:  meson test -C build --print-errorlogs
+        run:  arch -arch=${{ matrix.conf.arch }} meson test -C build --print-errorlogs
 
       - name: Summarize warnings
         if:   matrix.conf.run_tests != true
         env:
           MAX_WARNINGS: ${{ matrix.conf.max_warnings }}
-        run:  python3 ./scripts/count-warnings.py -lf build.log
+        run:  arch -arch=${{ matrix.conf.arch }} python3 ./scripts/count-warnings.py -lf build.log
 
-  build_macos_release_arm64:
-    name: Release build (arm64)
-    runs-on: self-hosted
-    if: github.event_name != 'pull_request' || contains('dreamer,kcgen,ant-222,Wengier', github.actor) == false
+  build_macos_release:
+    name: Release build (${{ matrix.runner.arch }})
+    runs-on: ${{ matrix.runner.host }}
+    if: github.event_name != 'pull_request' || contains('dreamer,kcgen,ant-222,Wengier,kklobe', github.actor) == false
+
+    strategy:
+      matrix:
+        runner:
+          - host: macos-latest
+            arch: x86_64
+            needs_deps: true
+
+          - host: [self-hosted, macOS, arm64, release-builds]
+            arch: arm64
+            needs_deps: false
+
     steps:
       - uses: actions/checkout@v2
 
       - name:  Prepare brew and compiler caches
+        if:    matrix.runner.needs_deps
         id:    prep-caches
         shell: bash
         run: |
           set -eu
           BREW_DIR="$(brew --cache)"
-          brew cleanup
+          DISCARD_DIR="${{ github.workspace }}/discard"
+          mkdir -p "$DISCARD_DIR"
+          mv -f "$BREW_DIR"/* "$DISCARD_DIR"
           mkdir -p "$CCACHE_DIR"
           echo "::set-output name=brew_dir::$BREW_DIR"
           echo "::set-output name=ccache_dir::$CCACHE_DIR"
           echo "::set-output name=today::$(date +%F)"
 
       - uses:  actions/cache@v2
+        if:    matrix.runner.needs_deps
         with:
           path: ${{ steps.prep-caches.outputs.brew_dir }}
-          key:  brew-cache-${{ steps.prep-caches.outputs.today }}
-          restore-keys: brew-cache-
+          key:  brew-cache-${{ matrix.runner.arch }}-${{ steps.prep-caches.outputs.today }}
+          restore-keys: brew-cache-${{ matrix.runner.arch }}-
 
       - name: Install C++ compiler and libraries
+        if:   matrix.runner.needs_deps
         run: |
-          brew install librsvg tree \
+          arch -arch=${{ matrix.runner.arch }} brew install librsvg tree \
             $(cat ./.github/packages/macos-latest-brew.txt)
 
       - uses:  actions/cache@v2
+        if:    matrix.runner.needs_deps
         with:
           path: ${{ steps.prep-caches.outputs.ccache_dir }}
-          key:  ccache-macos-release-${{ steps.prep-caches.outputs.today }}
-          restore-keys: ccache-macos-release-
+          key:  ccache-macos-release-${{ matrix.runner.arch }}-${{ steps.prep-caches.outputs.today }}
+          restore-keys: ccache-macos-release-${{ matrix.runner.arch }}-
 
       - name:  Cache subprojects
         uses:  actions/cache@v2
@@ -146,7 +210,7 @@ jobs:
           key:  subprojects-${{ hashFiles('subprojects/*.wrap') }}
 
       - name: Log environment
-        run:  ./scripts/log-env.sh
+        run:  arch -arch=${{ matrix.runner.arch }} ./scripts/log-env.sh
 
       - name: Inject version string
         run: |
@@ -157,19 +221,19 @@ jobs:
 
       - name: Setup release build
         run: |
-          meson setup \
+          arch -arch=${{ matrix.runner.arch }} meson setup \
             --wrap-mode=forcefallback \
             -Dbuildtype=release \
-            -Doptimization=s \
             -Ddefault_library=static \
             -Db_asneeded=true \
+            -Db_lto=true \
             -Dtry_static_libs=opusfile,png,sdl2,sdl2_net \
             -Dfluidsynth:enable-floats=true \
             -Dfluidsynth:try-static-deps=true \
             build
 
       - name: Build
-        run:  arch -arch=arm64 ninja -C build
+        run:  arch -arch=${{ matrix.runner.arch }} ninja -C build
 
       - name: Package
         run: |
@@ -222,7 +286,6 @@ jobs:
           install -m 644 contrib/translations/pl/pl_PL.CP437.lng "$dst_lng/pl.cp437.lng"
           install -m 644 contrib/translations/pl/pl_PL.lng       "$dst_lng/pl.lng"
           install -m 644 contrib/translations/ru/ru_RU.lng       "$dst_lng/ru.lng"
-
           ln -s /Applications dist/
 
           codesign -s "-" dist/dosbox-staging.app --force --deep -v
@@ -232,169 +295,49 @@ jobs:
               -srcfolder dist \
               -ov -format UDZO "dosbox-staging-macOS-${{ env.VERSION }}.dmg"
 
-      - name: Upload disk image
-        uses: actions/upload-artifact@v2
-        # GitHub automatically zips the artifacts, and there's no option
-        # to skip it or upload a file only.
-        with:
-          name: dosbox-staging-macOS-arm64
-          path: dosbox-staging-macOS-${{ env.VERSION }}.dmg
-
-
-  # This job exists only to publish an artifact with version info when building
-  # from master branch, so snapshot build version will be visible on:
-  # https://dosbox-staging.github.io/downloads/devel/
-  #
-  publish_additional_artifacts_arm64:
-    name: Publish additional artifacts (arm64)
-    needs: build_macos_release_arm64
-    runs-on: self-hosted
-    if: github.event_name == 'push' && github.ref == 'refs/heads/master'
-    steps:
-      - uses: actions/checkout@v2
-      - name: Generate changelog
-        run: |
-          set +x
-          git fetch --unshallow
-          VERSION=$(git describe --abbrev=4)
-          echo "VERSION=$VERSION" >> $GITHUB_ENV
-          NEWEST_TAG=$(git describe --abbrev=0)
-          git log "$NEWEST_TAG..HEAD" > changelog-$VERSION.txt
-      - uses: actions/upload-artifact@v2
-        with:
-          # Keep exactly this artifact name; it's being used to propagate
-          # version info via GitHub REST API
-          name: changelog-${{ env.VERSION }}.txt
-          path: changelog-${{ env.VERSION }}.txt
-
-  build_macos_release_x86_64:
-    name: Release build (x86_64)
-    runs-on: macos-latest
-    if: github.event_name != 'pull_request' || contains('dreamer,kcgen,ant-222,Wengier', github.actor) == false
-    steps:
-      - uses: actions/checkout@v2
-
-      - name:  Prepare brew and compiler caches
-        id:    prep-caches
+      - name:  Install Clam AV
+        if:    matrix.runner.needs_deps
+        id:    prep-clamdb
         shell: bash
         run: |
-          set -eu
-          BREW_DIR="$(brew --cache)"
-          DISCARD_DIR="${{ github.workspace }}/discard"
-          mkdir -p "$DISCARD_DIR"
-          mv -f "$BREW_DIR"/* "$DISCARD_DIR"
-          mkdir -p "$CCACHE_DIR"
-          echo "::set-output name=brew_dir::$BREW_DIR"
-          echo "::set-output name=ccache_dir::$CCACHE_DIR"
+          brew install clamav > /dev/null
+          clamconf=/usr/local/etc/clamav/freshclam.conf
+          mv -f "$clamconf".sample "$clamconf"
+          sed -ie 's/^Example/#Example/g' "$clamconf"
+          sed -ie 's/30/20000/g' "$clamconf"
           echo "::set-output name=today::$(date +%F)"
 
       - uses:  actions/cache@v2
+        if:    matrix.runner.needs_deps
+        id:    cache-clamdb
         with:
-          path: ${{ steps.prep-caches.outputs.brew_dir }}
-          key:  brew-cache-${{ steps.prep-caches.outputs.today }}
-          restore-keys: brew-cache-
+          path: ${{ env.CLAMDB_DIR }}/**/*.cvd
+          key:  clamdb-macos-${{ steps.prep-clamdb.outputs.today }}
+          restore-keys: |
+            clamdb-macos-
 
-      - name: Install C++ compiler and libraries
-        run: |
-          brew install librsvg tree \
-            $(cat ./.github/packages/macos-latest-brew.txt)
-
-      - uses:  actions/cache@v2
-        with:
-          path: ${{ steps.prep-caches.outputs.ccache_dir }}
-          key:  ccache-macos-release-${{ steps.prep-caches.outputs.today }}
-          restore-keys: ccache-macos-release-
-
-      - name:  Cache subprojects
-        uses:  actions/cache@v2
-        with:
-          path: subprojects/packagecache
-          key:  subprojects-${{ hashFiles('subprojects/*.wrap') }}
-
-      - name: Log environment
-        run:  ./scripts/log-env.sh
-
-      - name: Inject version string
+      - name: Clam AV scan
         run: |
           set -x
-          git fetch --prune --unshallow
-          export VERSION=$(git describe --abbrev=5)
-          echo "VERSION=$VERSION" >> $GITHUB_ENV
-
-      - name: Setup release build
-        run: |
-          meson setup \
-            --wrap-mode=forcefallback \
-            -Dbuildtype=release \
-            -Ddefault_library=static \
-            -Db_asneeded=true \
-            -Db_lto=true \
-            -Dtry_static_libs=opusfile,png,sdl2,sdl2_net \
-            -Dfluidsynth:enable-floats=true \
-            -Dfluidsynth:try-static-deps=true \
-            build
-
-      - name: Build
-        run:  ninja -C build
-
-      - name: Package
-        run: |
-          set -x
-
-          # Print shared object dependencies
-          otool -L build/dosbox
-          python3 scripts/verify-macos-dylibs.py build/dosbox
-
-          # Generate icon
-          make -C contrib/icons/ dosbox-staging.icns
-
-          dst=dist/dosbox-staging.app/Contents
-
-          # Prepare content
-          install -d "$dst/MacOS/"
-          install -d "$dst/Resources/"
-          install -d "$dst/SharedSupport/"
-
-          install        "build/dosbox"                      "$dst/MacOS/"
-          install -m 644 "contrib/macos/Info.plist.template" "$dst/Info.plist"
-          install -m 644 "contrib/macos/PkgInfo"             "$dst/PkgInfo"
-          install -m 644 "contrib/icons/dosbox-staging.icns" "$dst/Resources/"
-          install -m 644 "docs/README.template"              "$dst/SharedSupport/README"
-          install -m 644 "COPYING"                           "$dst/SharedSupport/COPYING"
-          install -m 644 "README"                            "$dst/SharedSupport/manual.txt"
-          install -m 644 "docs/README.video"                 "$dst/SharedSupport/video.txt"
-
-          # Fill README template file
-          sed -i -e "s|%VERSION%|${{ env.VERSION }}|"           "$dst/Info.plist"
-          sed -i -e "s|%GIT_COMMIT%|$GITHUB_SHA|"               "$dst/SharedSupport/README"
-          sed -i -e "s|%GIT_BRANCH%|${GITHUB_REF#refs/heads/}|" "$dst/SharedSupport/README"
-          sed -i -e "s|%GITHUB_REPO%|$GITHUB_REPOSITORY|"       "$dst/SharedSupport/README"
-
-          ln -s /Applications dist/
-
-          codesign -s "-" dist/dosbox-staging.app --force --deep -v
-          
-          hdiutil create \
-              -volname "dosbox-staging" \
-              -srcfolder dist \
-              -ov -format UDZO "dosbox-staging-macOS-${{ env.VERSION }}.dmg"
+          freshclam --foreground
+          clamscan --heuristic-scan-precedence=yes --recursive --infected dist
 
       - name: Upload disk image
         uses: actions/upload-artifact@v2
         # GitHub automatically zips the artifacts, and there's no option
         # to skip it or upload a file only.
         with:
-          name: dosbox-staging-macOS-x86_64
+          name: dosbox-staging-macOS-${{ matrix.runner.arch }}
           path: dosbox-staging-macOS-${{ env.VERSION }}.dmg
 
   # This job exists only to publish an artifact with version info when building
   # from master branch, so snapshot build version will be visible on:
   # https://dosbox-staging.github.io/downloads/devel/
   #
-  publish_additional_artifacts_x64_64:
-    name: Publish additional artifacts (x86_64)
-    needs: build_macos_release_x86_64
-    runs-on: macos-latest
+  publish_additional_artifacts:
+    name: Publish additional artifacts
+    needs: build_macos_release
+    runs-on: [macos-latest, self-hosted]
     if: github.event_name == 'push' && github.ref == 'refs/heads/master'
     steps:
       - uses: actions/checkout@v2
