Define and prefer HAVE_BUILTIN_CLEAR_CACHE in meson.build

--- a/meson.build
+++ b/meson.build
@@ -85,6 +85,10 @@ if cc.has_function('__builtin_available')
   conf_data.set10('HAVE_BUILTIN_AVAILABLE', true)
 endif
 
+if cc.has_function('__builtin___clear_cache')
+  conf_data.set10('HAVE_BUILTIN_CLEAR_CACHE', true)
+endif
+
 if cc.has_function('mprotect', prefix : '#include <sys/mman.h>')
   conf_data.set10('HAVE_MPROTECT', true)
 endif
