--- a/.github/workflows/platforms.yml
+++ b/.github/workflows/platforms.yml
@@ -8,7 +8,11 @@ jobs:
     name: Repository commit check
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout repository and submodules
+        uses: actions/checkout@v2
+        with:
+          submodules: recursive
+
       - id: commit-check
         run: 'echo ::set-output name=has-commits::$(./scripts/has-commits-since.sh "24 hours ago")'
     outputs:
@@ -35,8 +39,10 @@ jobs:
             arch: ppc64le
             distro: ubuntu20.04
     steps:
-      - name: Checkout
+      - name: Checkout repository and submodules
         uses: actions/checkout@v2
+        with:
+          submodules: recursive
 
       - name: Build
         uses: uraimo/run-on-arch-action@master
