--- a/.github/workflows/pvs-studio.yml
+++ b/.github/workflows/pvs-studio.yml
@@ -9,10 +9,10 @@ jobs:
     env:
       debfile: pvs-studio-7.14.50353.142-amd64.deb
     steps:
-      - uses: actions/checkout@v2
-
-      - name: Fetch submodules
-        run:  git submodule update --init --recursive
+      - name: Checkout repository and submodules
+        uses: actions/checkout@v2
+        with:
+          submodules: recursive
 
       - run:  sudo apt-get update
 
