--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -8,9 +8,14 @@ jobs:
     name: Repository commit check
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout repository and submodules
+        uses: actions/checkout@v2
+        with:
+          submodules: recursive
+
       - id: commit-check
         run: 'echo ::set-output name=has-commits::$(./scripts/has-commits-since.sh "24 hours ago")'
+
     outputs:
       has-commits: ${{ steps.commit-check.outputs.has-commits }}
 
@@ -45,7 +50,10 @@ jobs:
       CHERE_INVOKING: yes
 
     steps:
-      - uses:  actions/checkout@v2
+      - name: Checkout repository and submodules
+        uses: actions/checkout@v2
+        with:
+          submodules: recursive
 
       - name:  Check repo for commits
         id:    repo-meta
