--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -52,9 +52,10 @@ jobs:
           vcpkg integrate install
           if (-not $?) { throw "vcpkg failed to integrate packages" }
 
-      - uses:  actions/checkout@v2
-      - name: Fetch submodules
-        run:  git submodule update --init --recursive
+      - name: Checkout repository and submodules
+        uses: actions/checkout@v2
+        with:
+          submodules: recursive
 
       - name:  Log environment
         shell: pwsh
@@ -124,9 +125,10 @@ jobs:
           vcpkg integrate install
           if (-not $?) { throw "vcpkg failed to integrate packages" }
 
-      - uses:  actions/checkout@v2
-      - name: Fetch submodules
-        run:  git submodule update --init --recursive
+      - name: Checkout repository and submodules
+        uses: actions/checkout@v2
+        with:
+          submodules: recursive
 
       - name:  Log environment
         shell: pwsh
