Minimize warning-level for subprojects, as these are out-of-scope
Subprojects are only present to provide dependencies when the
local package manager is unable to provide the libraries.

Because fixing dependencies (and by extensions warnings) is out
of scope of staging (ie: such as SDL warnings), so too are
warnings from subprojects. Therefore, seeing excessive warnings
from a subproject only acts as confusing and excessive visual
clutter.

If someone does want to see greater subproject warning levels,
they can easily be "turned up" with:

  -Dmt32emu:warning_level=3
  -Dfluidsynth:warning_level=3

--- a/meson.build
+++ b/meson.build
@@ -7,6 +7,8 @@ project('dosbox-staging', 'c', 'cpp',
 	  'warning_level=3',
 	  'b_ndebug=if-release',
 	  'b_staticpic=false',
+	  'mt32emu:warning_level=0',
+	  'fluidsynth:warning_level=0',
 	])
 
 # After increasing the minimum-required meson version, make the following
