--- a/tests/vs/tests.vcxproj
+++ b/tests/vs/tests.vcxproj
@@ -230,6 +230,7 @@ $(TargetPath)
     <ClCompile Include="..\..\src\libs\loguru\loguru.cpp" />
     <ClCompile Include="..\..\src\libs\whereami\whereami.c" />
     <ClCompile Include="..\fs_utils_tests.cpp" />
+    <ClCompile Include="..\iohandler_containers_tests.cpp" />
     <ClCompile Include="..\rwqueue_tests.cpp" />
     <ClCompile Include="..\setup_tests.cpp" />
     <ClCompile Include="..\soft_limiter_tests.cpp" />
