Try harder to build FluidSynth statically for Linux CI releases
Recently CI builds started failing with -fPIC due to the use of a shared
FluidSynth library:

 [95/305] Linking target subprojects/fluidsynth-2.2.0/libfluidsynth.so
 ...
 /usr/lib/x86_64-linux-gnu/libglib-2.0.a(libglib_2_0_la-gslice.o): relocation R_X86_64_PC32
 against symbol `stderr@@GLIBC_2.2.5' can not be used when making a shared object;
 recompile with -fPIC /usr/bin/ld: final link failed: Bad value

This is despite the CI release build specifically requesting to use static
libraries.

--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -137,7 +137,7 @@ jobs:
         run:  ./scripts/count-warnings.py -lf build.log
 
 
-  build_linux_release_dynamic:
+  build_linux_release:
     name: Release build
     runs-on: ubuntu-18.04
     if: github.event_name != 'pull_request' || contains('dreamer,kcgen,ant-222,Wengier', github.actor) == false
@@ -173,7 +173,7 @@ jobs:
         uses:  actions/cache@v2
         with:
           path: subprojects/packagecache
-          key:  subprojects-${{ hashFiles('subprojects/*.wrap') }}
+          key:  subprojects-${{ hashFiles('subprojects/*.wrap') }}-1
 
       - name: Log environment
         run:  ./scripts/log-env.sh
@@ -188,11 +188,12 @@ jobs:
       - name: Setup release build
         run: |
           meson setup \
+            --wrap-mode=forcefallback \
             -Dbuildtype=release \
             -Ddefault_library=static \
             -Db_asneeded=true \
             -Db_lto=true \
-            -Dtry_static_libs=png \
+            -Dtry_static_libs=fluidsynth,png \
             -Dfluidsynth:enable-floats=true \
             -Dfluidsynth:try-static-deps=true \
             build
@@ -288,7 +289,7 @@ jobs:
   #
   publish_additional_artifacts:
     name: Publish additional artifacts
-    needs: build_linux_release_dynamic
+    needs: build_linux_release
     runs-on: ubuntu-18.04
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     steps:
