--- a/tests/meson.build
+++ b/tests/meson.build
@@ -13,13 +13,20 @@
 # If gtest is not available at all, unit tests will be disabled.
 #
 gtest_dep = optional_dep
+gmock_dep = optional_dep
+
 if not (get_option('buildtype') == 'release' and get_option('unit_tests').auto())
   gtest_dep = dependency('gtest', main : true,
                          required : get_option('unit_tests'),
                          fallback : ['gtest', 'gtest_main_dep'])
+
+  gmock_dep = dependency('gmock',
+                         required : get_option('unit_tests'),
+                         fallback : ['gtest', 'gmock_dep'])
 endif
-if not gtest_dep.found()
+if not (gtest_dep.found() or gmock_dep.found())
   gtest_dep = disabler()
+  gmock_dep = disabler()
 endif
 
 # unit tests with specific requirements
@@ -28,13 +35,13 @@ endif
 # - fs_utils - depends on files in: tests/files/
 #
 example = executable('example', ['example_tests.cpp', 'stubs.cpp'],
-                     dependencies : [gtest_dep, sdl2_dep, libmisc_dep, libloguru_dep],
+                     dependencies : [gmock_dep, gtest_dep, sdl2_dep, libmisc_dep, libloguru_dep],
                      include_directories : incdir)
 test('gtest example', example, 
      should_fail : true)
 
 fs_utils = executable('fs_utils', ['fs_utils_tests.cpp', 'stubs.cpp'],
-                      dependencies : [gtest_dep, libmisc_dep, libloguru_dep],
+                      dependencies : [gmock_dep, gtest_dep, libmisc_dep, libloguru_dep],
                       include_directories : incdir)
 test('gtest fs_utils', fs_utils,
      workdir : project_source_root, is_parallel : false)
@@ -54,7 +61,7 @@ unit_tests = [
 foreach ut : unit_tests
   name = ut.get('name')
   exe = executable(name, [name + '_tests.cpp', 'stubs.cpp'],
-                   dependencies : [gtest_dep, libloguru_dep] + ut.get('deps'),
+                   dependencies : [gmock_dep, gtest_dep, libloguru_dep] + ut.get('deps'),
                    include_directories : incdir)
   test('gtest ' + name, exe)
 endforeach
